--- a/composer.json
+++ b/composer.json
@@ -40,8 +40,9 @@
 	"require":{
 		"php":">=5.3",
 		"contao/core": ">=2.11,<4.0",
-		"contao-community-alliance/composer-plugin": "*",
-		"metamodels/core":"~2.0.0"
+		"contao-community-alliance/composer-plugin": "~2.0.0",
+		"metamodels/core":"~2.0.0",
+		"menatwork/contao-multicolumnwizard": "~3.3.0"
 	},
 	"require-dev": {
 		"cyberspectrum/contao-toolbox": "dev-master",
