--- a/.travis.yml
+++ b/.travis.yml
@@ -23,3 +23,7 @@ sudo: false
 branches:
   only:
     - tng
+
+# Hack to make things work again - we can not use a shallow repository.
+git:
+  depth: 2147483647
