--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,7 @@
 	},
 	"require":{
 		"php":">=5.3",
-		"contao/core": ">=2.11,<4.0",
+		"contao/core": ">=3.2,<4.0",
 		"contao-community-alliance/composer-plugin": "~2.0",
 		"metamodels/core":"~2.0",
 		"menatwork/contao-multicolumnwizard": "~3.3"
@@ -52,7 +52,7 @@
 		"metamodels/base-unit-tests": "~1.0"
 	},
 	"conflict": {
-		"contao/core": "3.0.*"
+		"contao/core": "3.4.0"
 	},
 	"autoload": {
 		"psr-0": {
