--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,7 @@
     "menatwork/contao-multicolumnwizard": "~3.3"
   },
   "require-dev": {
-    "cyberspectrum/contao-toolbox": "dev-master",
+    "cyberspectrum/contao-toolbox": "~0.6",
     "contao-community-alliance/build-system": "~1.0",
     "contao-community-alliance/build-system-all-tasks": "~1.0",
     "contao-community-alliance/coding-standard": "~1.0",
@@ -51,6 +51,11 @@
   "autoload": {
     "psr-0": {
       "MetaModels": "src"
+    }
+  },
+  "autoload-dev": {
+    "psr-0": {
+      "MetaModels\\Test": "tests"
     }
   },
   "extra": {
