--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 language: php
 
 php:
-  - 5.3
-  - 5.4
-  - 5.5
-  - 5.6
+  - "5.3"
+  - "5.4"
+  - "5.5"
+  - "5.6"
+  - "7.0"
 
 env:
   - CONTAO_VERSION=~3.2.0
@@ -15,8 +16,14 @@ env:
 # Exclude impossible Contao Version combinations.
 matrix:
   exclude:
-    - php: 5.3
-      env: CONTAO_VERSION=~3.5.0
+    - php: "5.3"
+      env: CONTAO_VERSION=~3.5.5
+    - php: "7.0"
+      env: CONTAO_VERSION=~3.2.0
+    - php: "7.0"
+      env: CONTAO_VERSION=~3.3.0
+    - php: "7.0"
+      env: CONTAO_VERSION=~3.4.0
 
 sudo: false
 
@@ -30,4 +37,3 @@ script: ant -keep-going
 # Hack to make things work again - we can not use a shallow repository.
 git:
   depth: 2147483647
-  
