--- a/composer.json
+++ b/composer.json
@@ -41,19 +41,19 @@
   "require-dev": {
     "cyberspectrum/contao-toolbox": "~0.6",
     "metamodels/base-unit-tests": "~1.0",
-    "phpcq/all-tasks": "~1.0"
+    "phpcq/all-tasks": "~1.1"
   },
   "conflict": {
     "contao/core": "3.4.0"
   },
   "autoload": {
     "psr-0": {
-      "MetaModels": "src"
+      "MetaModels\\": "src"
     }
   },
   "autoload-dev": {
     "psr-0": {
-      "MetaModels\\Test": "tests"
+      "MetaModels\\Test\\": "tests"
     }
   },
   "extra": {
