--- a/composer.json
+++ b/composer.json
@@ -32,8 +32,8 @@
     "source": "https://github.com/MetaModels/attribute_alias"
   },
   "require": {
-    "php": ">=5.3",
-    "contao/core": ">=3.2,<3.6",
+    "php": ">=5.4",
+    "contao/core": "^3.5.5",
     "contao-community-alliance/composer-plugin": "~2.0",
     "metamodels/core": "~2.0",
     "menatwork/contao-multicolumnwizard": "~3.3"
@@ -42,9 +42,6 @@
     "cyberspectrum/contao-toolbox": "~0.6",
     "metamodels/base-unit-tests": "~1.0",
     "phpcq/all-tasks": "~1.1"
-  },
-  "conflict": {
-    "contao/core": "3.4.0"
   },
   "autoload": {
     "psr-0": {
